# claude-hud-one

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  settings.html  vite.config.ts
.claude/: settings.json  workspace-index.md
.claude/bridge/: claude-status-bridge.mjs
.github/workflows/: release.yml
local/需求讨论/: 2026-06-08-win11-claude-code-status-hud-需求讨论.md  2026-06-08-win11-codex-island-full-replica-一期正式产品方案.md  2026-06-09-claude-hud-one-对标codex-island-当前进展与正式使用缺口.md  2026-06-10-claude-hud-one-内置claude-hud-plus终端hud集成分析.md  2026-06-12-claude-hud-one-全面对标-codeisland-桌面hud改造方案.md  2026-06-12-codex-island-desktop-hud-展示交互复刻分析.md
scripts/: check-version.mjs  smoke.ps1  test-ui.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: claude-status-bridge.mjs  cleanup-claude-hud-one.ps1  install-claude-hud-one-bridge.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/window/: claude_global.rs  claude_session.rs  claude_status.rs  diagnostics.rs  display.rs  fullscreen.rs  mod.rs  overlay.rs  settings.rs  single_instance.rs  startup.rs  terminal_jump.rs  tray.rs  updater.rs  usage_cost.rs
src/app/: App.tsx  overlayBridge.ts  types.ts
src/hud/: config.ts  displayItemRegistry.ts  fieldSchema.ts  index.ts  normalize.ts  parityMatrix.ts  terminalRenderer.ts  types.ts
src/providers/: claudeCodeSummary.ts  liveUsageCost.ts  mockData.ts
src/stores/: useIslandStore.ts
tests/: ui.spec.ts
(+56 files in other folders)
